WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239981
[JSC] Fix ASan crash due to CString ownership
https://bugs.webkit.org/show_bug.cgi?id=239981
Summary
[JSC] Fix ASan crash due to CString ownership
Yusuke Suzuki
Reported
2022-05-02 13:39:05 PDT
[JSC] Fix ASan crash due to CString ownership
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2022-05-02 13:41:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/459
Yusuke Suzuki
Comment 2
2022-05-02 13:44:11 PDT
rdar://92621119
EWS
Comment 3
2022-05-02 15:59:16 PDT
Committed
r293693
(
250189@main
): <
https://commits.webkit.org/250189@main
> Reviewed commits have been landed. Closing PR #459 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug