[JSC] Fix ASan crash due to CString ownership https://bugs.webkit.org/show_bug.cgi?id=239981

Reviewed by Darin Adler and Mark Lam.

We need to ensure that CString is kept alive.

* runtime/JSDateMath.cpp:
(JSC::DateCache::timeZoneDisplayName):

Canonical link: https://commits.webkit.org/250189@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293693 268f45cc-cd09-0410-ab3c-d52691b4dbfc